--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="hero-content">
         <h1 class="display-4">Kavna Storitev Gostinske Storitve in Dobava Kave</h1>
         <p class="lead">Najboljša kavna storitev v mestu. Ponujamo gostinske storitve in dobavo kave.</p>
-        <a href="#" class="btn btn-primary btn-lg">Naročite zdaj</a>
+        <a href="#" class="btn btn-transparent btn-lg button-hero">Naročite zdaj</a>
       </div>
     </section>
     <section class="container my-5">
