--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Kavna Storitev</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="images/favicon.png" type="image/x-icon">
 </head>
 <body>
   <header class="sticky-top">
