--- a/products.html
+++ b/products.html
@@ -11,23 +11,22 @@
 
 <body>
   <header class="sticky-top">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-transparent">
       <div class="container">
         <a class="navbar-brand" href="index.html">Kavna Storitev</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-          aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Domov</a>
+              <a class="nav-link active" href="index.html">Domov</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">O Nas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="products.html">Izdelki</a>
+              <a class="nav-link" href="products.html">Izdelki</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Kontakt</a>
@@ -73,7 +72,7 @@
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.amazonaws.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
