--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,8 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-lg-8">
-          <form action="https://formspree.io/f/{your-form-id}" method="POST">
+          <form action="https://api.web3forms.com/submit" method="POST">
+            <input type="hidden" name="access_key" value="705e107c-2ecd-41ee-a434-17b4b40d6a42">
             <div class="form-group">
               <label for="name">Ime:</label>
               <div class="input-group">
@@ -61,6 +62,7 @@
                   <span class="input-group-text"><i class="fas fa-envelope"></i></span>
                 </div>
                 <input type="email" id="email" name="email" class="form-control" required>
+                <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
               </div>
             </div>
             <div class="form-group">
