--- a/about.html
+++ b/about.html
@@ -129,9 +129,38 @@
     </section>
   </main>
   
-  <footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2024 Kavne Storitve. Vse pravice pridržane.</p>
-    <a href="terms-and-conditions/Pavel Peroša s.p. SPLOŠNI POGOJI POSLOVANJA.pdf" class="footer-a" target="_blank">Pogoji poslovanja</a>
+  
+  <footer class="bg-dark text-white text-center py-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 text-left">
+          <h4 class="footer-title">Hitre Povezave</h4>
+          <ul class="footer-links">
+            <li><a href="index.html" class="footer-link">Domov</a></li>
+            <li><a href="about.html" class="footer-link">O Nas</a></li>
+            <li><a href="products.html" class="footer-link">Izdelki</a></li>
+            <li><a href="cialde.html" class="footer-link">Cialde</a></li>
+            <li><a href="contact.html" class="footer-link">Kontakt</a></li>
+          </ul>
+        </div>
+        <div class="col-md-6 text-left contact-info">
+          <h4 class="footer-title about-contact-title">Kontaktirajte Nas</h4>
+          <p><i class="fas fa-map-marker-alt mr-2"></i>Pavel Peroša s.p., Vršnik 5, 2201 Zgornja Kungota, Slovenija</p>
+          <p><i class="fas fa-phone-alt mr-2"></i>Telefonska številka: +386 40 568 073</p>
+          <p><i class="fas fa-envelope mr-2"></i>E-pošta: <a href="mailto:pavelperosa@gmail.com" class="footer-link-mail">pavelperosa@gmail.com</a></p>
+        </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col-md-12 text-center">
+          <div class="social-icons">
+            <a href="#" class="mr-3"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="#" class="mr-3"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <p class="mt-3 footer-credits">&copy; 2024 Kavne Storitve. Vse pravice pridržane.</p>
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
