--- a/contact.html
+++ b/contact.html
@@ -11,32 +11,35 @@
 
 </head>
 <body>
-  <header class="sticky-top">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="index.html">Kavna Storitev</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Domov</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">O Nas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="products.html">Izdelki</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="contact.html">Kontakt</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+  <header>
+    <p><i class="fas fa-envelope"></i> Vsa naročila se pošljejo na naš e-mail: <a href="mailto:info@perosa.com">info@perosa.com</a></p>
   </header>
+
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Peroša</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Domov</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">O Nas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="products.html">Izdelki</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Kontakt</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
   <main class="container my-5">
     <section class="contact">
