--- a/products.html
+++ b/products.html
@@ -11,40 +11,43 @@
 </head>
 
 <body>
-  <header>
-    <p><i class="fas fa-envelope"></i> Vsa naročila se pošljejo na naš e-mail: <a href="mailto:info@perosa.com">info@perosa.com</a></p>
-  </header>
 
-  <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">Peroša</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link active" href="index.html">Domov</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">O Nas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="products.html">Izdelki</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Kontakt</a>
-          </li>
-        </ul>
+  <div class="sticky-top">
+    <header>
+      <p><i class="fas fa-envelope"></i> Vsa povpraševanja se pošljejo na naš e-mail: <a href="mailto:info@perosa.com">info@perosa.com</a></p>
+    </header>
+  
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">Peroša</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Domov</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">O Nas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="products.html">Izdelki</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Kontakt</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+  </div>
 
   <main class="container my-5">
     <section>
-      <h2 class="mb-4 text-center">Naša Ponudba</h2>
-      <p class="text-center mb-5">Ponujamo široko paleto kavnih izdelkov, servis kavnih aparatov in visokokakovostna čistila za vse vaše potrebe. Odkrijte našo ponudbo in izberite kategorijo, ki vas zanima.</p>
+      <h1 class="display-4 about-title text-center">Naša ponudba</h1>
+      <p class="text-center mb-5 lead">Ponujamo široko paleto kavnih izdelkov, servis kavnih aparatov in visokokakovostna čistila za vse vaše potrebe. Odkrijte našo ponudbo in izberite kategorijo, ki vas zanima.</p>
       <div class="row">
         <!-- Sidebar Menu -->
         <aside class="col-md-3">
@@ -105,6 +108,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
   <script src="js/main.js"></script>
 </body>
 
