--- a/cialde.html
+++ b/cialde.html
@@ -10,120 +10,94 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-  <header>
-    <p><i class="fas fa-envelope"></i> Vsa naročila se pošljejo na naš e-mail: <a href="mailto:info@perosa.com">info@perosa.com</a></p>
-  </header>
-
-  <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">Peroša</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link active" href="index.html">Domov</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">O Nas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="products.html">Izdelki</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Kontakt</a>
-          </li>
-        </ul>
+  <div class="sticky-top">
+    <header>
+      <p><i class="fas fa-envelope"></i> Vsa povpraševanja se pošljejo na naš e-mail: <a href="mailto:info@perosa.com">info@perosa.com</a></p>
+    </header>
+  
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">Peroša</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Domov</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">O Nas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="products.html">Izdelki</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Kontakt</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+  </div>
 
   <main class="container my-5">
-    <section>
-      <h2 class="mb-4 text-center">Cialde</h2>
-      <p class="text-center mb-5">Odkrijte našo ponudbo kavnih podov (ciald), ki so zasnovani za enostavno in hitro pripravo odlične kave.</p>
-      
-      <!-- Carousel -->
-      <div id="cialdeCarousel" class="carousel slide mb-5" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#cialdeCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#cialdeCarousel" data-slide-to="1"></li>
-          <li data-target="#cialdeCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="images/cialde/IMG_0170.jpg" class="d-block w-100" alt="Cialde Image 1">
-          </div>
-          <div class="carousel-item">
-            <img src="images/cialde/IMG_0173.jpg" class="d-block w-100" alt="Cialde Image 2">
-          </div>
-          <div class="carousel-item">
-            <img src="images/cialde/IMG_0176.jpg" class="d-block w-100" alt="Cialde Image 3">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#cialdeCarousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#cialdeCarousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+    <section class="hero">
+      <div class="hero-content">
+        <h1>Odkrijte Naše Kavne Cialde</h1>
+        <p>Enostavna in hitra priprava odlične kave</p>
+        <a href="#cialde-products" class="btn btn-primary button-hero" id="scroll-to-products">Oglejte si izdelke</a>
       </div>
-      
-      <!-- Separator -->
-      <hr class="separator">
+    </section>
 
-      <div class="row">
-        <!-- Product Display -->
-        <div class="col-md-6 cialde-product">
-          <div class="product-card">
-            <img src="images/cialde/ese-espresso.jpg" class="product-image" alt="ESE Espresso">
-            <div class="card-overlay">
-              <h5 class="card-title">ESE Espresso</h5>
-              <p class="card-text">LUSSO caffè pods/cialda v papirnatem filtru, kremasta, polna in uravnotežena kava z okusom sveže pražene kave. Mešanica kakovostne arabice in robuste.</p>
-              <p class="card-text"><strong>150 Podsov/ciald: 27,40 € brez DDV</strong></p>
-              <p class="card-text"><em>Brezplačna dostava nad 450 kom znotraj SI.</em></p>
+    <section id="cialde-products" class="my-5">
+      <div class="text-center mb-5">
+        <h2 class="mb-4">Zakaj Izbrati Naše Kavne Cialde?</h2>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="feature-box">
+              <i class="fas fa-coffee fa-3x mb-3 "></i>
+              <h4>Vrhunska Kakovost</h4>
+              <p>Naše cialde so narejene iz skrbno izbranih zrn arabice in robuste, kar zagotavlja izjemen okus in aromo.</p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="feature-box">
+              <i class="fas fa-clock fa-3x mb-3 "></i>
+              <h4>Hitra Priprava</h4>
+              <p>Cialde omogočajo enostavno in hitro pripravo kave, kar je idealno za hiter in brezskrben začetek dneva.</p>
             </div>
           </div>
         </div>
-        <div class="col-md-6 cialde-product">
-          <div class="product-card">
-            <img src="images/cialde/ese-decaf.jpg" class="product-image" alt="ESE Brezkofeinska">
-            <div class="card-overlay">
-              <h5 class="card-title">ESE Brezkofeinska</h5>
-              <p class="card-text">Brezkofeinska kava LUSSO v papirnatem filtru, kakovostna, kremasta in polnega telesa s popolno uravnoteženim okusom ter jantarne barve.</p>
-              <p class="card-text"><strong>50 Podsov/ciald: 18,27 € brez DDV</strong></p>
-              <p class="card-text"><em>Brezplačna dostava nad 450 kom znotraj SI.</em></p>
-            </div>
-          </div>
+      </div>
+
+      <!-- Product Display -->
+      <div class="row mb-5 align-items-center product-display">
+        <div class="col-md-6 order-md-2">
+          <img src="images/cialde/IMG_0170.jpg" class="img-fluid" alt="Cialde Image 1">
+        </div>
+        <div class="col-md-6 order-md-1 d-flex flex-column justify-content-center text-content">
+          <h3 class="product-title">Cialde/podsi ESE Espresso</h3>
+          <p class="product-description">LUSSO caffè pods/cialda v papirnatem filtru, kremasta, polna in uravnotežena kava z okusom sveže pražene kave. Mešanica kave, sestavljena iz kakovostne arabice in robuste, zmešane z veliko pozornostjo, da se zagotovi ravnovesje in stabilnost okusa, zaradi česar je ta kava popolna pijača za ob vsakem odmoru dneva. Okusite lusso kavo za kavne avtomate v podsih/cialdah.</p>
+          <p class="product-price"><strong>150 Podsov/ciald: 27,40 € brez DDV</strong></p>
+          <p class="product-shipping"><em>BREZPLAČNA DOSTAVA nad 450 kom znotraj SI</em></p>
+        </div>
+      </div>
+
+      <div class="row mb-5 align-items-center product-display">
+        <div class="col-md-6">
+          <img src="images/cialde/IMG_0173.jpg" class="img-fluid" alt="Cialde Image 2">
+        </div>
+        <div class="col-md-6 d-flex flex-column justify-content-center text-content">
+          <h3 class="product-title">Cialde/podsi ESE Brezkofeinska/DECAFFE</h3>
+          <p class="product-description">Brezkofeinska kava LUSSO v papirnatem filtru, je kakovostna, kremasta in polnega telesa s popolno uravnoteženim okusom ter jantarne barve. Uživajte v kavi, DECAFFE v baru, doma ali v pisarni.</p>
+          <p class="product-price"><strong>50 Podsov/ciald: 18,27 € brez DDV</strong></p>
+          <p class="product-shipping"><em>BREZPLAČNA DOSTAVA nad 450 kom znotraj SI</em></p>
         </div>
       </div>
     </section>
   </main>
-
-  <section class="cialde-showcase">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-6 text-content bg-light">
-          <h2 class="card-title">
-            Kavne Cialde
-          </h2>
-          <h6 class="card-subtitle mb-2 text-muted">
-            Kavne cialde so enostavne za uporabo in zagotavljajo odličen okus kave.
-          </h6>
-          <p class="card-cialde-text">
-            Brezkofeinska kava LUSSO v papirnatem filtru, kakovostna, kremasta in polnega telesa s popolno uravnoteženim okusom ter jantarne barve.
-          </p>
-        </div>
-        <div class="col-md-6" data-aos="fade-left">
-          <img src="images/cialde/cialde.jpg" alt="Woman in spa">
-      </div>
-      </div>
-    </div>
-  </section>
 
   <footer class="bg-dark text-white text-center py-4">
     <div class="container">
@@ -161,5 +135,16 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <script src="js/script.js"></script>
+  <script>
+    document.getElementById('scroll-to-products').addEventListener('click', function(event) {
+      event.preventDefault();
+      document.querySelector('#cialde-products').scrollIntoView({
+        behavior: 'smooth'
+      });
+    });
+  </script>
+  
 </body>
 </html>
