--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 
 <body>
+  <div class="sticky-top">
   <header>
-    <p><i class="fas fa-envelope"></i> Vsa naročila se pošljejo na naš e-mail: <a href="mailto:info@perosa.com">info@perosa.com</a></p>
+    <p><i class="fas fa-envelope"></i> Vsa povpraševanja se pošljejo na naš e-mail: <a href="mailto:info@perosa.com">info@perosa.com</a></p>
   </header>
 
   <nav class="navbar navbar-expand-lg navbar-dark">
@@ -41,13 +42,15 @@
       </div>
     </div>
   </nav>
+</div>
 
   <main>
     <section class="hero d-flex align-items-center justify-content-center text-center" id="hero">
       <div class="hero-content" id="hero-content">
         <h1 class="display-4" id="hero-title">Kavna Storitev Gostinske Storitve in Dobava Kave</h1>
         <p class="lead" id="hero-subtitle">Najboljša kavna storitev v mestu. Ponujamo gostinske storitve in dobavo kave.</p>
-        <a href="#" class="btn btn-transparent btn-lg button-hero">Naročite zdaj</a>
+        <!-- <a href="#" class="btn btn-transparent btn-lg button-hero">Naročite zdaj</a> -->
+        <button class="button-hero">Preglej ponudbo</button>
       </div>
     </section>
     <section class="container my-5">
@@ -83,7 +86,11 @@
     </section>
   
     <section class="container my-5">
-      <h2 class="text-center">Naše Blagovne Znamke</h2>
+      <h2 class="text-center">Poglejte si izbiro Ciald</h2>
+    </section>
+
+    <section class="container my-5">
+      <h2 class="text-center">Zaupajo nam tudi :</h2>
       <div id="brandCarousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -113,8 +120,6 @@
         </a>
       </div>
     </section>
-
-  </main>
 
   </main>
 
@@ -149,6 +154,7 @@
       </div>
     </div>
     <p class="mt-3 footer-credits">&copy; 2024 Kavne Storitve. Vse pravice pridržane.</p>
+    <a href="splosni-pogoji.html" class="footer-a">Pogoji poslovanja</a>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
