updating index page and testing some card styles

--- a/cialde.html
+++ b/cialde.html
@@ -47,7 +47,7 @@
       <div class="hero-content">
         <h1>Odkrijte Naše Kavne Cialde</h1>
         <p>Enostavna in hitra priprava odlične kave</p>
-        <a href="#cialde-products" class="btn btn-primary button-hero" id="scroll-to-products">Oglejte si izdelke</a>
+        <button href="#cialde-products" class="button-hero" id="scroll-to-products">Oglejte si izdelke</a>
       </div>
     </section>
 
@@ -87,7 +87,7 @@
 
       <div class="row mb-5 align-items-center product-display">
         <div class="col-md-6">
-          <img src="images/cialde/IMG_0173.jpg" class="img-fluid" alt="Cialde Image 2">
+          <img src="images/cialde/IMG_0176.jpg" class="img-fluid" alt="Cialde Image 2">
         </div>
         <div class="col-md-6 d-flex flex-column justify-content-center text-content">
           <h3 class="product-title">Cialde/podsi ESE Brezkofeinska/DECAFFE</h3>
@@ -136,7 +136,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <script src="js/script.js"></script>
+  <script src="js/main.js"></script>
   <script>
     document.getElementById('scroll-to-products').addEventListener('click', function(event) {
       event.preventDefault();
