--- a/index.html
+++ b/index.html
@@ -50,43 +50,45 @@
         <h1 class="display-4" id="hero-title">Kavna Storitev Gostinske Storitve in Dobava Kave</h1>
         <p class="lead" id="hero-subtitle">Najboljša kavna storitev v mestu. Ponujamo gostinske storitve in dobavo kave.</p>
         <!-- <a href="#" class="btn btn-transparent btn-lg button-hero">Naročite zdaj</a> -->
-        <button class="button-hero">Preglej ponudbo</button>
+        <button class="button-hero" id="scroll-to-categories">Preglej ponudbo</button>
       </div>
     </section>
-    <section class="container my-5">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="card product">
-            <img src="images/product1.jpg" class="card-img-top" alt="Izdelek 1">
+
+    <section class="categories" id="categories">
+    <div class="container my-5">
+      <div class="row" id="categories">
+        <div class="col-md-12">
+          <div class="card coffee-card index-card">
+            <img src="images/skupaj-produkti/IMG_0169.jpg" alt="Coffee Products Image">
             <div class="card-body">
-              <h5 class="card-title">Izdelek 1</h5>
-              <p class="card-text">Opis izdelka 1.</p>
+              <h5 class="card-title">Kavni Izdelki</h5>
+              <p class="card-text">Izberite med široko paleto kavnih izdelkov.</p>
+              <a href="coffee.html" class="btn btn-primary">Več informacij</a>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card product">
-            <img src="images/product2.jpg" class="card-img-top" alt="Izdelek 2">
+        <div class="col-md-12">
+          <div class="card machine-service-card index-card">
+            <img src="images/machine-card-img.jpg" alt="Coffee Machines Service Image">
             <div class="card-body">
-              <h5 class="card-title">Izdelek 2</h5>
-              <p class="card-text">Opis izdelka 2.</p>
+              <h5 class="card-title">Servis Kavnih Aparatov</h5>
+              <p class="card-text">Profesionalni servis za vse vrste kavnih aparatov.</p>
+              <a href="servis.html" class="btn btn-primary">Več informacij</a>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card product">
-            <img src="images/product3.jpg" class="card-img-top" alt="Izdelek 3">
+        <div class="col-md-12">
+          <div class="card cleaning-products-card index-card">
+            <img src="images/cleaning-card-img.jpg" alt="Cleaning Products Image">
             <div class="card-body">
-              <h5 class="card-title">Izdelek 3</h5>
-              <p class="card-text">Opis izdelka 3.</p>
+              <h5 class="card-title">Čistila</h5>
+              <p class="card-text">Najboljša čistila za vaše kavne aparate.</p>
+              <a href="cistila.html" class="btn btn-primary">Več informacij</a>
             </div>
           </div>
         </div>
       </div>
-    </section>
-  
-    <section class="container my-5">
-      <h2 class="text-center">Poglejte si izbiro Ciald</h2>
+    </div>
     </section>
 
     <section class="container my-5">
@@ -153,15 +155,26 @@
         </div>
       </div>
     </div>
-    <p class="mt-3 footer-credits">&copy; 2024 Kavne Storitve. Vse pravice pridržane.</p>
+    <p class="mt-3 footer-credits">&copy; 2024 Peroša. Vse pravice pridržane.</p>
     <a href="splosni-pogoji.html" class="footer-a">Pogoji poslovanja</a>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
   <script src="js/main.js"></script>
+  <script>
+    document.getElementById('scroll-to-categories').addEventListener('click', function(event) {
+      event.preventDefault();
+      const navbarHeight = document.querySelector('.sticky-top').offsetHeight;
+      const categoriesSection = document.querySelector('#categories');
+      const scrollToPosition = categoriesSection.offsetTop - navbarHeight;
+      window.scrollTo({
+        top: scrollToPosition,
+        behavior: 'smooth'
+      });
+    });
+  </script>
 </body>
 
 </html>
