--- a/cards.html
+++ b/cards.html
@@ -135,8 +135,8 @@
         <div class="card minimalist-card">
           <img src="images/kava-zrno/Kava-zrno.jpg" alt="Product Image" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-title">ESE Espresso</h5>
-            <p class="card-text">LUSSO caffè pods/cialda v papirnatem filtru, kremasta, polna in uravnotežena kava z okusom sveže pražene kave.</p>
+            <h5 class="card-title">ESE Gold</h5>
+            <p class="card-text">Premium kava z bogato aromo in polnim okusom. Idealna za ljubitelje luksuzne kave.</p>
             <a href="ese-espresso.html" class="btn btn-primary">Learn More</a>
           </div>
         </div>
@@ -146,8 +146,8 @@
         <div class="card modern-card">
           <img src="images/kava-zrno/Kava-zrno.jpg" alt="Product Image" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-title">ESE Brezkofeinska</h5>
-            <p class="card-text">Brezkofeinska kava LUSSO v papirnatem filtru, kakovostna, kremasta in polnega telesa s popolno uravnoteženim okusom.</p>
+            <h5 class="card-title">ESE Gold</h5>
+            <p class="card-text">Premium kava z bogato aromo in polnim okusom. Idealna za ljubitelje luksuzne kave.</p>
             <div class="rating">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -166,8 +166,8 @@
             <img src="images/kava-zrno/Kava-zrno.jpg" alt="Product Image" class="card-img-top">
           </div>
           <div class="card-body">
-            <h5 class="card-title">ESE Lungo</h5>
-            <p class="card-text">LUSSO caffè pods/cialda v papirnatem filtru, dolga in polna kava z okusom sveže pražene kave.</p>
+            <h5 class="card-title">ESE Gold</h5>
+            <p class="card-text">Premium kava z bogato aromo in polnim okusom. Idealna za ljubitelje luksuzne kave.</p>
             <a href="images/kava-zrno/Kava-zrno.jpg" class="btn btn-primary">More Details</a>
           </div>
         </div>
@@ -180,8 +180,8 @@
           <div class="card-body">
             <img src="images/kava-zrno/Kava-zrno.jpg" alt="Product Image" class="card-img-top">
             <div class="card-overlay">
-              <h5 class="card-title">ESE Cappuccino</h5>
-              <p class="card-text">LUSSO caffè pods/cialda v papirnatem filtru, bogata in polna kava z okusom sveže pražene kave.</p>
+                <h5 class="card-title">ESE Gold</h5>
+                <p class="card-text">Premium kava z bogato aromo in polnim okusom. Idealna za ljubitelje luksuzne kave.</p>
               <a href="ese-cappuccino.html" class="btn btn-primary">Learn More</a>
             </div>
           </div>
@@ -192,8 +192,8 @@
         <div class="card infographic-card">
           <img src="images/kava-zrno/Kava-zrno.jpg" alt="Product Image" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-title">ESE Mocha</h5>
-            <p class="card-text">Kava z bogato in polno aromo, s čokoladnimi notami. Idealna za ljubitelje sladke in kremaste kave.</p>
+            <h5 class="card-title">ESE Gold</h5>
+            <p class="card-text">Premium kava z bogato aromo in polnim okusom. Idealna za ljubitelje luksuzne kave.</p>
             <div class="infographics">
               <div class="info-item"><i class="fas fa-map-marker-alt"></i> Brazil</div>
               <div class="info-item"><i class="fas fa-coffee"></i> Arabica</div>
@@ -208,8 +208,8 @@
         <div class="card vintage-card">
           <img src="images/kava-zrno/Kava-zrno.jpg" alt="Product Image" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-title">ESE Classic</h5>
-            <p class="card-text">Tradicionalna kava z bogato aromo in polnim okusom, idealna za ljubitelje klasične kave.</p>
+            <h5 class="card-title">ESE Gold</h5>
+            <p class="card-text">Premium kava z bogato aromo in polnim okusom. Idealna za ljubitelje luksuzne kave.</p>
             <a href="ese-classic.html" class="btn btn-primary">More Details</a>
           </div>
         </div>
